micromobility_car_navigation/local/Project/dev_ws/log/build_2021-04-01_12-03-07/navigation/stderr.log
  File "/home/user/Projects/dev_ws/install/navigation/lib/python3.8/site-packages/navigation/gps_publisher.py", line 72
    except bluetooth.btcommon.BluetoothError as err:
    ^
SyntaxError: invalid syntax

